--- a/index.html
+++ b/index.html
@@ -35,6 +35,25 @@ BONUS
     </head>
 
     <body>
+        <nav class="navbar sticky-top navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Julie Ragsdale</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="#">Portfolio</a>
+                    <a class="nav-item nav-link" href="#">Contact</a>
+                    </div>
+                </div>
+            </nav>
+        </nav>
+        
+        <div class="container">
+            Hello, World!
+        </div>
 
     </body>
 
