add background image to assets

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ BONUS
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
         <!-- Link to own CSS -->
-        <link>
+        <link href="style.css">
     </head>
 
     <body>
@@ -60,12 +60,41 @@ BONUS
                 </div>
             </nav>
             <div class="container-fluid">
-                <div class="row">
-                    <div class="col-md-6">
-                        <img src="" class="img-fluid" alt="Responsive image">
+                <section>
+                    <div class="row">
+                        <h2 class="container-fluid">About</h2>
+                        <div class="col-md-6">
+                            <img src="assets\images\headshot.jpg" class="img-fluid" alt="Responsive image">
+                        </div>
+                        <div class="col-md-6">
+                            <p>
+                                I received my M.S. in Ecology and Evolutionary Biology from Appalachian State University in 2016. 
+                                My research explored the effects of spatial scale and genotypic diversity of <em>Solidago altissima</em> 
+                                on the associated insect pollinator community. Simply put, I examined the differences in the phytochemistry 
+                                among individual plants and how those differences influenced pollinators.
+                            </p>
+                            <p>
+                                I am also an artist/maker and small business owner, having started my sole proprietorship of Calathea Collection 
+                                in the summer of 2018. Everything that I create is related to plants in some way. I have been painting with acrylic 
+                                since 2004 and have more recently begun experimenting with watercolor and gouache; I use cement to make small 
+                                planters (this is quickly becoming my favorite aspect of my business!), and I make macrame plant hangers. You could 
+                                say that my brand is an ode to the plant kingdom.        
+                            </p>
+                        </div>
                     </div>
-                </div>
+                </section>
             </div>
+
+                <!-- Footer -->
+            <footer class="page-footer font-small blue fixed-bottom">
+
+                <!-- Copyright -->
+                <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale
+            <!-- <a href="https://mdbootstrap.com/education/bootstrap/">Link</a> -->
+        </div>
+                <!-- Copyright -->
+            
+            </footer>
         </div>     
     </body>
 
