--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
         <!-- Link to own CSS -->
-        <link>
+        <link href="style.css">
 
     </head>
 
@@ -32,13 +32,13 @@
         
                 <div class="collapse navbar-collapse" id="responsiveMenu">
                 <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link" href="portfolio.html">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -60,6 +60,15 @@
             </div>
             <button type="button" class="btn btn-info">Submit</button>
         </form>
+
+        <!-- Footer -->
+        <footer class="page-footer font-small blue fixed-bottom">
+
+            <!-- Copyright -->
+            <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale
+            <!-- <a href="https://mdbootstrap.com/education/bootstrap/">Link</a> -->
+        </div>
+        </footer>
 
     </body>
 
