--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ BONUS
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
         <!-- Link to own CSS -->
-        <link href="style.css">
+        <link href="style.css" rel="stylesheet">
     </head>
 
     <body>
         <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container">
             
                     <a class="navbar-brand" href="index.html" id="logo">Julie Ragsdale</a>
