just about finished

--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
     </head>
 
     <body>
+
+        <!-- Navigation Bar -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
         
@@ -46,28 +48,29 @@
             </div>
         </nav>
 
-<!-- Contact Form -->
-        <form>
-            <label class="sr-only" for="inlineFormInputName2">Name</label>
-            <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Your name">
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            </div>
-            <div class="form-group">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <button type="button" class="btn btn-info">Submit</button>
-        </form>
+        <!-- MAIN CONTENT: Contact Form -->
+        <div class="container-main">
+            <h2 class="container-fluid">Contact</h2>
+            <form>
+                <label class="sr-only" for="inlineFormInputName2">Name</label>
+                <input type="text" class="form-control mb-2 mr-sm-2" id="inlineFormInputName2" placeholder="Your name">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Email address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="10">Your message here...</textarea>
+                </div>
+                <button type="button" class="btn">Submit</button>
+            </form>
+        </div>
 
         <!-- Footer -->
         <footer class="page-footer font-small blue fixed-bottom">
-
-            <!-- Copyright -->
             <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale
             <!-- <a href="https://mdbootstrap.com/education/bootstrap/">Link</a> -->
-        </div>
+            </div>
         </footer>
 
     </body>
