a few slight changes

--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,7 @@
 
         <!-- Footer -->
         <footer class="page-footer font-small blue fixed-bottom">
-            <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale
-            <!-- <a href="https://mdbootstrap.com/education/bootstrap/">Link</a> -->
-            </div>
+            <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale</div>
         </footer>
 
     </body>
