--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@ BONUS
     <head>
         <title>Julie Ragsdale</title>
 
-        <!-- Links to other pages in the directory-->
+        <!-- Links to other pages in the directory -->
         <link href="index.html">
         <link href="portfolio.html">
         <link href="contact.html">
 
-        <!-- Bootstrap Stylesheet -->
+        <!-- Bootstrap stylesheet -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
-        <!-- Link to own CSS -->
-        <link href="style.css" rel="stylesheet">
+        <!-- Link to own stylesheet -->
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -83,12 +83,14 @@ BONUS
                                 planters (this is quickly becoming my favorite aspect of my business!), and I make macrame plant hangers. You could 
                                 say that my brand is an ode to the plant kingdom.        
                             </p>
-                            <ul>Some things that I love include:
-                                <li>lattes + working in coffee shops</li>
-                                <li>art</li>
-                                <li>cats + dogs</li>
-                                <li>moody + overcast weather</li>
-                                <li>a new pen + a fresh notebook</li>
+                            <p>Some things that I love include:</p>
+                                <ul>
+                                    <li>lattes + working in coffee shops</li>
+                                    <li>art</li>
+                                    <li>cats + dogs</li>
+                                    <li>moody + overcast weather</li>
+                                    <li>a new pen + a fresh notebook</li>
+                                </ul>
                             </ul>
                         </div>
                     </div>
@@ -96,9 +98,7 @@ BONUS
            
             <!-- Footer -->
             <footer class="page-footer font-small blue fixed-bottom">
-                <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale
-                <!-- <a href="https://mdbootstrap.com/education/bootstrap/">Link</a> -->
-                </div>
+                <div class="footer-copyright text-center py-3">© 2018 Copyright: Julie Ragsdale</div>
             </footer>
         </div>     
     </body>
