--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ BONUS
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         
         <!-- Link to own stylesheet -->
-        <link rel="stylesheet" href="style.css">
+        <link href="assets\style.css" rel="stylesheet">
     </head>
 
     <body>
